milletwifikx: Update defconfig for CyanogenMod
Signed-off-by: cholokei <leesl0416@naver.com>

--- a/arch/arm/configs/cyanogenmod_milletwifikx_defconfig
+++ b/arch/arm/configs/cyanogenmod_milletwifikx_defconfig
@@ -225,15 +225,15 @@ CONFIG_BLOCK_SUPPORT_STLOG=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=m
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_NOOP=y
+CONFIG_DEFAULT_IOSCHED="noop"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -897,7 +897,7 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_FRONTSWAP=y
@@ -951,7 +951,7 @@ CONFIG_CMDLINE=""
 # CPU Frequency scaling
 #
 CONFIG_CPU_FREQ=y
-CONFIG_SEC_DVFS=y
+# CONFIG_SEC_DVFS is not set
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
@@ -964,10 +964,10 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -3419,7 +3419,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 CONFIG_MMC_TEST=m
 # CONFIG_MMC_SUPPORT_BKOPS_MODE is not set
-CONFIG_MMC_BLOCK_TEST=m
 # CONFIG_MMC_CPRM is not set
 
 #
@@ -3628,7 +3627,7 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_SEC_OOM_KILLER=y
+# CONFIG_SEC_OOM_KILLER is not set
 # CONFIG_SEC_DEBUG_LMK_MEMINFO is not set
 # CONFIG_SEC_DEBUG_LMK_COUNT_INFO is not set
 # CONFIG_ANDROID_SWITCH is not set
@@ -3637,6 +3636,19 @@ CONFIG_SEC_OOM_KILLER=y
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
 CONFIG_VNSWAP=y
+
+#
+# Qualcomm Atheros Prima WLAN module
+#
+# CONFIG_PRIMA_WLAN is not set
+CONFIG_PRONTO_WLAN=m
+# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+# CONFIG_ENABLE_LINUX_REG is not set
 
 #
 # Qualcomm MSM specific device drivers
@@ -4124,8 +4136,7 @@ CONFIG_SEC_DEBUG_NOCACHE_LOG_IN_LEVEL_LOW=y
 #
 # PowerManagement Feature
 #
-CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 CONFIG_DEBUG_SET_MODULE_RONX=y
 
@@ -4161,7 +4172,7 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
-CONFIG_SEC_SELINUX=y
+# CONFIG_SEC_SELINUX is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
