--- a/arch/arm/configs/milletwifikx_defconfig
+++ b/arch/arm/configs/milletwifikx_defconfig
@@ -774,12 +774,10 @@ CONFIG_MSM_CPR_REGULATOR=y
 CONFIG_I2C_ACTUATOR=y
 # CONFIG_SWITCH_DUAL_MODEM is not set
 # CONFIG_TIMA_RKP is not set
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 CONFIG_TIMA_LKMAUTH=y
 # CONFIG_TIMA_LKMAUTH_CODE_PROT is not set
 # CONFIG_TIMA_TEST_INFRA is not set
-CONFIG_TIMA_UEVENT=y
-CONFIG_TIMA_LOG=y
 # CONFIG_KRAIT_REGULATOR is not set
 CONFIG_EXTEND_SERIAL_NUM_16=y
 # CONFIG_MUIC_RESET_PIN_ENABLE is not set
@@ -966,10 +964,10 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -4134,10 +4132,7 @@ CONFIG_DEBUG_SET_MODULE_RONX=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
 # CONFIG_RESTART_REASON_SEC_PARAM is not set
 CONFIG_RESTART_REASON_DDR=y
 
